# Saiko-Injector

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TECHNICAL.md  keybinds.json  version.cmake
cli/: lulu.py
ghidra_project_bundle/: CheckDecompilation.java  CountCppResultsScript.java  CountRenamed.java  DecompSample.java  DecompSample2.java  DemangleAndRename.java  DumpSome.java  ExportDecomp.java  ExportDecomp2.java  ExportImproved.java  ExportRefs.java  ExtractInfoScript.java  FindKeybinds.java  ListFuncs.java  LogStringRenamer.java  QuickFuncCheck.java  analysis_summary.txt  decomp_sample.txt  decomp_sample2.txt  fid_report.txt  func_report.txt  ghidra_extraction_results.txt  log_renamer_report.txt  renamed_list.txt  rtti_count_results.txt  rtti_demangle_report.txt  test_output.txt  test_run.txt
ghidra_project_bundle/BundleAnalysis.rep/: project.prp
ghidra_project_bundle/BundleAnalysis.rep/idata/: ~index.bak
ghidra_project_bundle/decompiled/: INDEX.md
ghidra_project_bundle/decompiled/classes/: structures.txt
ghidra_project_bundle/decompiled/functions/: 04d02d02d02d02d02dz.c  1requestclosedockwidget.c  2closeothertabsrequested.c  2tabclosedint.c  (+12737 more)
ghidra_project_bundle/keybind_analysis/: 00_Unwind_140009f50.c  01_Unwind_14000bf50.c  02_Unwind_14000cf50.c  03_Unwind_14000f5a0.c  04_Unwind_14000f5d0.c  05_Unwind_140011f50.c  06_FUN_14003df50.c  07_FUN_14003f540.c  08_FUN_14004cf50.c  09_FUN_14004f500.c  10_FUN_14004f520.c  11_FUN_14004f540.c  12_FUN_14004f560.c  13_FUN_14004f590.c  14_FUN_14004f5b0.c  15_FUN_14004f5d0.c  16_FUN_14004f5f0.c  17_FUN_14004ff50.c  18_FUN_140050f50.c  19_FUN_140052f50.c  20_FUN_140056f50.c  21_FUN_14005f570.c  22_Unwind_140062f50.c  23_FUN_140064f50.c  24_Unwind_14006df50.c  25_Unwind_140074f50.c  26_Unwind_140080f50.c  27_FUN_140083f50.c  28_Unwind_140093f50.c  29_cancel_playtest_start_f5.c  30_Unwind_140096f50.c  31_FUN_14009f530.c  32_FUN_1400af5d0.c  33_FUN_1400df570.c  34_FUN_140105f50.c  35_sdl_event_queue_statistics.c  36_sdl_event_gamepad_steam_handle_updated.c  37_FUN_14010f500.c  38_FUN_14010f590.c  39_FUN_14012f550.c  (+10 more)
injector/: find_process.cpp  find_process.h  main.cpp
payload/: dllmain.cpp  ecs_hook.cpp  ecs_hook.h  keybind.cpp  keybind.h  pipe_server.cpp  pipe_server.h  sdl_hook.cpp  sdl_hook.h  troll.cpp  troll.h
shared/: qt_proxy.cpp  qt_proxy.h  shared.cpp  shared.h  version.h  version.h.in
(+2724 files in other folders)
